--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -687,6 +687,7 @@ margin-top: 5%;
  box-sizing: border-box; 
  padding: 1em;
  margin-top: 5em; 
+ box-shadow: 0px 0px 2px var(--blue-1);
 }
 
 .for-business__photo {
