--- a/public/styles/register.css
+++ b/public/styles/register.css
@@ -28,6 +28,7 @@
  background: white; 
  border-radius: 2em;
  animation: fade-in 0.5s ease-in;
+ box-shadow: 0px 0px 2px var(--blue-1);
 
   & legend {
    color: var(--blue-1);
