--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,4 +1,11 @@
 
+@font-face {
+ font-family: "Outfit";
+ src: url("/public/fonts/Outfit/Outfit-VariableFont_wght.ttf") format("truetype");
+ font-style: normal; 
+ font-weight: 100 900;
+}
+
 html, body {
 width: 100%; 
 height: 100%; 
